--- a/src/templates/index.html.twig
+++ b/src/templates/index.html.twig
@@ -1,37 +1,34 @@
 {% include 'header.html.twig' %}
-<div id="pageContainer">
-    <h1>{{pageTitle}}</h1>
-    {# jeśli użytkownik jest zalogowany to pokaż #}
+<div id="Navtool">
+  <div id="navbar">
+    <a href="#" class="navlink">Home</a>
+    <a href="#" class="navlink">Contact</a>
+    <a href="#" class="navlink">About Us</a>
+    <a href="#" class="navlink">FAQ</a>
+  </div>
+  <div id="loggedUser">
     {% if user is defined %}
-    <div id="Navtool">
-        <div id="navbar">
-            <a href="#" class="navlink">Home</a>
-            <a href="#" class="navlink">Contact</a>
-            <a href="#" class="navlink">About Us</a>
-            <a href="#" class="navlink">FAQ</a>
-        </div>
-        <br>
-        <br>
-        <a href="upload">Wgraj mema</a>
-        <br><br>
-        <div id="loggedUser">Zalogowany użytkownik: {{ user.getName() }} </div>
-        {% endif %}
-        {% for post in postArray %}
+    Zalogowany użytkownik: {{ user.getName() }}
+    {% endif %}
+  </div>
+  {% if user is defined %}
+  <a href="upload">Wgraj mema</a>
+  {% endif %}
+</div>
 
-        <div id="post">
-            <h2>{{ post.getTitle() }} </h2>
-            <img src="{{ post.getFilename() }}">
-            <h6>Autor: {{post.getAuthorName() }}</h6>
-            <h6>Data dodania: {{ post.getTimestamp() }} </h6>
-            <button onclick="location.href='like/{{ post.getId() }}'" class='upvote' type='button'>▲</button>
-            <div class='votecounter'>{{ post.getLikes() }}</div>
-            <button onclick="location.href='dislike/{{ post.getId() }}'" class='downvote' type='button'>▼</button>
-    
-        </div>
-        </div>
-        {% endfor %}
-        
-    </div>
+<div id="pageContainer">
+  <h1>{{pageTitle}}</h1>
+  {% for post in postArray %}
+  <div id="post">
+    <h2>{{ post.getTitle() }} </h2>
+    <img src="{{ post.getFilename() }}">
+    <h6>Autor: {{post.getAuthorName() }}</h6>
+    <h6>Data dodania: {{ post.getTimestamp() }} </h6>
+    <button onclick="location.href='like/{{ post.getId() }}'" class='upvote' type='button'>▲</button>
+    <div class='votecounter'>{{ post.getLikes() }}</div>
+    <button onclick="location.href='dislike/{{ post.getId() }}'" class='downvote' type='button'>▼</button>
+  </div>
+  {% endfor %}
+</div>
 
-
-    {% include 'footer.html.twig' %}
+{% include 'footer.html.twig' %}
